tests/expectations/compiler/multibyte/multibyte_fail.out
Error [EPAR0370047]: expected type
    --> compiler-test:28:30
     |
  28 |                    let swap: = arr[j];
     |                              ^
Error [EPAR0370003]: unexpected EOF
    --> compiler-test:37:1
     |

     | ^
